# react-native-totp-utils

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  react-native-totp-utils.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties  helpers.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/totputils/: TotpUtilsModule.java  TotpUtilsModulePackage.java  TotpUtilsPackage.java
android/src/newarch/: TotpUtilsSpec.java
android/src/oldarch/: TotpUtilsSpec.java
cpp/: base32.cpp  react-native-totp-utils.cpp  react-native-totp-utils.h
cpp/hmac/: hmac_sha1.cpp  hmac_sha1.hpp
cpp/hotp/: hotp.cpp  hotp.h
cpp/sha/: sha1.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/totputilsexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/totputilsexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/totputilsexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/TotpUtilsExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TotpUtilsExample.xcodeproj/: project.pbxproj
example/ios/TotpUtilsExample.xcodeproj/xcshareddata/xcschemes/: TotpUtilsExample.xcscheme
example/ios/TotpUtilsExample.xcworkspace/: contents.xcworkspacedata
example/ios/TotpUtilsExampleTests/: TotpUtilsExampleTests.m
example/src/: App.tsx
ios/: TotpUtils.h  TotpUtils.mm
ios/TotpUtils.xcodeproj/: project.pbxproj
src/: NativeTotpUtils.ts  index.tsx
src/types/: index.ts
src/utils/: index.ts
